--- a/reuse/common.css
+++ b/reuse/common.css
@@ -100,22 +100,31 @@
 		padding-left:32px;
 		}
 		
+		.socials {
+		width:40px;
+		height:auto;
+		border-radius:6px;
+		transition: all 0.1s ease-in-out;	
+		}
+		
 		.projecticons {
 		width:60%;
 		transition: all 0.1s ease-in-out;	
 		}
 		
-		.projecticons:hover {
-		transform: scale(1.04);	
+		.projecticons:hover, .socials:hover {
 		cursor:pointer;
-		transition: all 0.07s ease-in-out;	
+		transform: translateY(-3px) scale(1.01);
+		box-shadow: 0px 3px 5px rgba(11, 4, 60, 0.3);
 		}
 		
-		.projecticons:active {
-		transform: scale(0.95);
-		opacity:0.7;	
+		.projecticons:active, .socials:active {
+		transform: translateY(2px) scale(0.99);
+		opacity:0.7;
+		box-shadow: 0px 4px 1px rgba(11, 4, 60, 0.0);
 		}
 		
+
 		
 		
 		@media screen and (max-width: 1400px) {
